fix: prevent access to mods page without selected version

--- a/frontend/src/assets/locales/en_US.json
+++ b/frontend/src/assets/locales/en_US.json
@@ -102,13 +102,15 @@
     "tip": {
       "general": "Tip: First launch may be slow. Please wait.",
       "choose_version_dropdown": "Use the dropdown on the right to switch versions quickly.",
-      "open_version_settings_gear": "Click the gear to open Version Settings; customize icon and enable isolation.",
-      "mods_drag": "On the Mods page, drag-and-drop .zip/.dll onto the card to import.",
+      "open_version_settings_gear": "Hover the Current Version badge and click the gear in the tooltip to open Version Settings; supports icon customization and isolation.",
       "mods_import_button": "Use the “Import .zip/.dll” button on the Mods card to pick files.",
-      "mods_open_folder": "Click “Open Folder” on the Mods card to manage plugin files directly.",
+      "mods_open_folder_requirement": "Select a version before opening the Mods folder.",
       "download_versions": "Install Release/Preview on the Download page; it appears in the dropdown afterward.",
       "content_counts_card": "The Content card shows counts of worlds, resource and behavior packs.",
-      "file_manager_pick": "File Manager supports multi-select and returns paths to Mods import."
+      "file_manager_pick": "File Manager supports multi-select and returns paths to Mods import.",
+      "settings_base_root": "Settings lets you change content base path; default %LOCALAPPDATA%\\LeviLauncher.",
+      "directory_write_check": "Save only to writable directories; non-writable directories are disabled.",
+      "drag_import_unsupported": "Drag-and-drop import is unsupported; use Import .zip/.dll or File Manager."
     }
   },
   "moddedcard": {
